
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

rspec_on_rails users - don't forget to run script/generate rspec

* Applied LH[#133]  ExampleMatcher should match against before(:all) (Patch from Bob Cotton)
* Applied LH[#134] Only load spec inside spec_helper.rb (Patch from Mark Van Holstyn)
* RSpec now bails immediately if there are examples with identical names.
* Applied LH[#132]  Plain Text stories should support Given and Given: (Patch from Jarkko Laine)
* Applied LH[#16] Have SimpleMatchers expose their description for specdocs (Patch from Bryan Helmkamp)
* Stories now support --colour
* Changed the DSL modules to Example (i.e. Spec::Example instead of Spec::DSL)
* Applied [#15608] Story problem if parenthesis used in Given, When, Then or And (Patch from Sinclair Bain)
* Applied [#15659] GivenScenario fails when it is a RailsStory (Patch from Nathan Sutton)
* Fixed [#15639] rcov exclusion configuration. (Spec::Rails projects can configure rcov with spec/rcov.opts)
* The rdoc formatter (--format rdoc) is gone. It was buggy and noone was using it.
* Changed Spec::DSL::Behaviour to Spec::DSL::ExampleGroup
* Changed Spec::DSL::SharedBehaviour to Spec::DSL::SharedExampleGroup
* Applied [#14023] Small optimization for heavily proxied objects. (Patch from Ian Leitch)
* Applied [#13943] ProfileFormatter (Top 10 slowest examples) (Patch from Ian Leitch)
* Fixed [#15232] heckle is not working correctly in trunk (as of r2801)
* Applied [#14399] Show pending reasons in HTML report (Patch from Bryan Helmkamp)
* Discovered fixed: [#10263] mock "leak" when setting an expectation in a block passed to mock#should_receive